refactor: 방어적 복사 copyOf 쓰도록 변경